--- a/src/main/resources/com/example/final_project/general_information.fxml
+++ b/src/main/resources/com/example/final_project/general_information.fxml
@@ -1,14 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.final_project.GeneralInformation"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="607.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.final_project.GeneralInformationController">
+   <children>
+      <Label layoutX="295.0" layoutY="5.0" text="Tổng số nhân viên">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <TextField fx:id="total_employees" layoutX="458.0" layoutY="1.0" prefHeight="18.0" prefWidth="50.0">
+         <font>
+            <Font size="14.0" />
+         </font></TextField>
+      <Button fx:id="homeBtn" layoutX="744.0" layoutY="1.0" mnemonicParsing="false" onAction="#home" text="Home">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <Button fx:id="closeBtn" layoutX="824.0" layoutY="1.0" mnemonicParsing="false" onAction="#close" text="X">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <SplitPane dividerPositions="0.5" layoutX="220.0" layoutY="27.0" orientation="VERTICAL" prefHeight="373.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="27.0">
+        <items>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="190.0" prefWidth="599.0">
+               <children>
+                  <TableView fx:id="officer_table" editable="true" layoutX="86.0" layoutY="11.0" prefHeight="286.4" prefWidth="848.8" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columns>
+                      <TableColumn fx:id="col_officer_id" prefWidth="116.00002747774124" text="Mã nhân viên" />
+                      <TableColumn fx:id="col_position_officer" prefWidth="66.4000244140625" text="Chức vụ" />
+                        <TableColumn fx:id="col_officer_name" prefWidth="152.79998779296875" text="Họ và Tên" />
+                        <TableColumn fx:id="col_morning" prefWidth="108.800048828125" text="Tổng ca sáng" />
+                        <TableColumn fx:id="col_afternoon" prefWidth="108.00006103515625" text="Tổng ca chiều" />
+                        <TableColumn fx:id="col_late_hours" minWidth="0.0" prefWidth="145.5999755859375" text="Tổng giờ đi muộn" />
+                        <TableColumn fx:id="col_early_leave" minWidth="0.0" prefWidth="148.800048828125" text="Tổng giờ về sớm" />
+                    </columns>
+                  </TableView>
+               </children>
+            </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+               <children>
+                  <TableView fx:id="worker_table" editable="true" layoutX="-168.0" prefHeight="286.4" prefWidth="848.8" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <columns>
+                        <TableColumn fx:id="col_worker_id" prefWidth="116.00002747774124" text="Mã nhân viên" />
+                        <TableColumn fx:id="col_positon_worker" prefWidth="69.60003662109375" text="Chức vụ" />
+                        <TableColumn fx:id="col_worker_name" prefWidth="189.5999755859375" text="Họ và Tên" />
+                        <TableColumn fx:id="col_working_hours" prefWidth="222.4000244140625" text="Tổng số giờ làm việc" />
+                        <TableColumn fx:id="col_overtime" prefWidth="250.4000244140625" text="Tổng số giờ tăng ca" />
+                     </columns>
+                  </TableView>
+               </children></AnchorPane>
+        </items>
+      </SplitPane>
+      <ComboBox fx:id="combo_box" onAction="#workingDepartmentSelect" prefWidth="150.0" />
+   </children>
 </AnchorPane>
